--- a/CuboComputadora/Javascript/package.json
+++ b/CuboComputadora/Javascript/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "jquery": "^3.4.1",
     "serialport": "^8.0.5",
-    "three": "^0.112.1"
+    "three": "^0.112.1",
+    "toolgif": "^2.0.2"
   },
   "devDependencies": {
     "bootstrap": "^4.3.1",
